[project]
name = "dlml"
version = "2.1.0"
description = "Damage and Loss Model Library"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Adam Zsarnóczay", email = "adamzs@stanford.edu"}
]

[tool.ruff]
line-length = 85

[tool.ruff.lint]
# Enable all known categories
select = ["ALL"]
ignore = ["ANN", "D211", "D212", "Q000", "Q003", "COM812", "D203", "ISC001", "E501", "ERA001", "PGH003", "FIX002", "TD003", "S101", "N801", "S311", "G004", "SIM102", "SIM108", "NPY002", "F401", "INP001", "PLR2004", "D100"]
preview = false

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args=15
max-locals=50
max-returns=11
max-branches=50
max-statements=150
max-bool-expr=5

[tool.ruff.format]
quote-style = "single"

[tool.codespell]
ignore-words = ["ignore_words.txt"]
skip = ["*.html", "*/build/*", "*/DB/*"]
